footer and header color change

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -27,7 +27,7 @@ body {
 }
 header {
   grid-area: header;
-  background-color: #203040;
+  background-color: #4f2496;
 }
 main {
   grid-area: main;
@@ -35,7 +35,7 @@ main {
 }
 footer {
   grid-area: footer;
-  background-color: #203040;
+  background-color: #4b248b;
   color: #ffffff;
 }
 /* Common */
